fixed spacing and centered mixtapes

--- a/source/css/main.css.sass
+++ b/source/css/main.css.sass
@@ -210,7 +210,6 @@ footer
 
 
   .main__archive-grid
-    //display: none !important
     list-style: none
     padding: 0
     display: flex
@@ -222,7 +221,8 @@ footer
     margin-top: 30px
     li
       display: inline-block
-      margin: 30px 0
+      margin: 0 auto
+      padding: 10px
       vertical-align: top
       width: 250px
       > a
